Inceput Implementari baza de Date

--- a/ShopManagement/App.config
+++ b/ShopManagement/App.config
@@ -15,5 +15,6 @@
   <connectionStrings>
     <add name="ShopMngEntities" connectionString="metadata=res://*/Model.ShopDatabase.csdl|res://*/Model.ShopDatabase.ssdl|res://*/Model.ShopDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ShopMng;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ShopMngEntities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ShopMng;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ShopMngEntities2" connectionString="metadata=res://*/Models.ShopDB.csdl|res://*/Models.ShopDB.ssdl|res://*/Models.ShopDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ShopMng;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
